--- a/main/KardioPerfusion.ui
+++ b/main/KardioPerfusion.ui
@@ -46,6 +46,9 @@
       <height>271</height>
      </rect>
     </property>
+    <property name="contextMenuPolicy">
+     <enum>Qt::CustomContextMenu</enum>
+    </property>
     <property name="autoFillBackground">
      <bool>false</bool>
     </property>
@@ -125,6 +128,51 @@
     </property>
     <property name="text">
      <string>Size:</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_regionGrow">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>380</y>
+      <width>81</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Region Grow</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="sb_regionGrowThreshold">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>418</y>
+      <width>51</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>4000</number>
+    </property>
+    <property name="singleStep">
+     <number>10</number>
+    </property>
+    <property name="value">
+     <number>20</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>420</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Threshold:</string>
     </property>
    </widget>
   </widget>
@@ -241,8 +289,8 @@
    <slot>on_btn_draw_clicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>117</x>
-     <y>405</y>
+     <x>79</x>
+     <y>385</y>
     </hint>
     <hint type="destinationlabel">
      <x>120</x>
@@ -250,8 +298,25 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>btn_regionGrow</sender>
+   <signal>clicked()</signal>
+   <receiver>KardioPerfusion</receiver>
+   <slot>on_btn_regionGrow_clicked()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>50</x>
+     <y>444</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>571</x>
+     <y>438</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>on_btn_draw_clicked()</slot>
+  <slot>on_btn_regionGrow_clicked()</slot>
  </slots>
 </ui>
