--- a/main/KardioPerfusion.ui
+++ b/main/KardioPerfusion.ui
@@ -499,7 +499,7 @@
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="MultiPlanarReformatWidget" name="mprView" native="true">
+         <widget class="MultiPlanarReformatWidget" name="mprView_ul" native="true">
           <property name="enabled">
            <bool>true</bool>
           </property>
@@ -538,28 +538,7 @@
      </layout>
     </item>
    </layout>
-   <zorder>btn_regionGrow</zorder>
-   <zorder>sb_regionGrowThreshold</zorder>
-   <zorder>label_3</zorder>
-   <zorder>btn_erode</zorder>
-   <zorder>btn_dilate</zorder>
-   <zorder>btn_analyse</zorder>
-   <zorder>gridLayoutWidget</zorder>
-   <zorder>formLayoutWidget</zorder>
-   <zorder>gridLayoutWidget_2</zorder>
-   <zorder>horizontalSpacer</zorder>
-   <zorder>sb_size</zorder>
-   <zorder>label_2</zorder>
-   <zorder>cb_erase</zorder>
-   <zorder>horizontalSpacer_2</zorder>
-   <zorder>btn_draw</zorder>
-   <zorder>horizontalSpacer_3</zorder>
    <zorder></zorder>
-   <zorder>horizontalSpacer_4</zorder>
-   <zorder>horizontalSpacer_5</zorder>
-   <zorder>line_3</zorder>
-   <zorder>horizontalSpacer_6</zorder>
-   <zorder>verticalSpacer</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
