--- a/main/KardioPerfusion.ui
+++ b/main/KardioPerfusion.ui
@@ -537,10 +537,22 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="minimumSize">
+         <size>
+          <width>400</width>
+          <height>400</height>
+         </size>
+        </property>
        </widget>
       </item>
       <item row="1" column="0">
        <widget class="MyTabWidget" name="tw_results">
+        <property name="minimumSize">
+         <size>
+          <width>400</width>
+          <height>400</height>
+         </size>
+        </property>
         <property name="currentIndex">
          <number>0</number>
         </property>
